# nxus-qbd-python

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: ci.yml  publish.yml
examples/: _common.py  async_basic_crud.py  async_connection_scoped.py  async_error_handling.py  async_reports.py  auth_setup.py  auto_pagination.py  basic_crud.py  connection_scoped.py  error_handling.py  pagination_walkthrough.py  reports.py  timeout_tuning.py
nxus_qbd/: __init__.py  _transport.py  client.py  config.py  errors.py  pagination.py  resources.py  types.py
scripts/: generate.py  generate_resource_registry.py  split_models.py
tests/: conftest.py
tests/integration/: test_async_smoke.py  test_resource_matrix.py  test_retrieve_regressions.py  test_smoke.py
tests/unit/: test_bar_code_model.py  test_config.py  test_datetime_models.py  test_errors.py  test_qbd_ref_model.py  test_query_serialization.py  test_vendor_pydantic_wiring.py
